--- a/index.html
+++ b/index.html
@@ -1,38 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="style.css" />
-    <title>Work Day Scheduler</title>
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
+		<link
+			rel="stylesheet"
+			href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+			integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
+			crossorigin="anonymous"
+		/>
+		<link
+			href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="style.css" />
+		<title>Work Day Scheduler</title>
+	</head>
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <!-- Timeblocks go here -->
-    </div>
+	<body>
+		<header class="jumbotron">
+			<h1 class="display-3">Work Day Scheduler</h1>
+			<p class="lead">A simple calendar app for scheduling your work day</p>
+			<p id="currentDay" class="lead">AJAX to produce current date</p>
+		</header>
+			<div class="container">
+				<h2>Time Table</h2>
+				<table class="table">
+					<thead>
+						<tr>
+							<th scope="col">Time</th>
+							<th scope="col">Events</th>
+							<th scope="col">Buttons</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr>
+							<td>9am</td>
+							<td>This will need to be editable via button and saved in local storage</td>
+							<td><button class="editbtn"></button></td>
+						</tr>
+						<tr>
+							<td>10am</td>
+							<td>This will need to be editable via button and saved in local storage</td>
+							<td><button class="editbtn"></button></td>
+						</tr>
+						<tr>
+							<td>11am</td>
+							<td>This will need to be editable via button and saved in local storage</td>
+							<td><button class="editbtn"></button></td>
+						</tr>
+						<tr>
+							<td>12pm</td>
+							<td>This will need to be editable via button and saved in local storage</td>
+							<td><button class="editbtn"></button></td>
+						</tr>
+						<tr>
+							<td>1pm</td>
+							<td>This will need to be editable via button and saved in local storage</td>
+							<td><button class="editbtn"></button></td>
+						</tr>
+						<tr>
+							<td>2pm</td>
+							<td>This will need to be editable via button and saved in local storage</td>
+							<td><button class="editbtn"></button></td>
+						</tr>
+						<tr>
+							<td>3pm</td>
+							<td>This will need to be editable via button and saved in local storage</td>
+							<td><button class="editbtn"></button></td>
+						</tr>
+						<tr>
+							<td>4pm</td>
+							<td>This will need to be editable via button and saved in local storage</td>
+							<td><button class="editbtn"></button></td>
+						</tr>
+						<tr>
+							<td>5pm</td>
+							<td>This will need to be editable via button and saved in local storage</td>
+							<td><button class="editbtn"></button></td>
+						</tr>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-  </body>
+					</tbody>
+				</table>
+				<!-- Timeblocks go here -->
+			</div>
+
+		<script src="https://code.jquery.com/jquery-3.4.1.min.js">
+		
+		
+		</script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+	</body>
 </html>
