--- a/index.html
+++ b/index.html
@@ -33,59 +33,61 @@
 		</header>
 		<div class="container">
 				<h2>Time Table</h2>
-				<table class="table">
+				<table class="table text-light">
 					<thead>
 						<tr>
-							<th scope="col-4">Time</th>
-							<th scope="col-8">Events</th>
-							<th scope="col-4">Buttons</th>
+						<!--How do I change the size of the middle column? Adding col sizes with grid doesn't work  -->
+						<!-- tried these w classes, is this the best way? -->
+							<th class="w-15" scope="col">Time</th>
+							<th class="w-75" scope="col">Events</th>
+							<th class="w-20 " scope="col">Buttons</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr id="9" class="timeblock">
 							<td>9am</td>
 							<td> <input class="form-control" data-store="0" placeholder="Add Your Event Here"></input></td>
-							<td><button class="editbtn btn btn-outline-dark">Save Changes</button></td>
+							<td class="text-center"><button class="editbtn btn btn-outline-light">Save Changes</button></td>
 						</tr>
 						<tr id="10" class="timeblock">
 							<td>10am</td>
 							<td><input class="form-control" data-store="1" placeholder="Add Your Event Here"></td>
-							<td><button class="editbtn btn btn-outline-dark">Save Changes</button></td>
+							<td class="text-center"><button class="editbtn btn btn-outline-light">Save Changes</button></td>
 						</tr>
 						<tr id="11" class="timeblock">
 							<td>11am</td>
 							<td><input class="form-control" data-store="2" placeholder="Add Your Event Here"></td>
-							<td><button class="editbtn btn btn-outline-dark">Save Changes</button></td>
+							<td class="text-center"><button class="editbtn btn btn-outline-light">Save Changes</button></td>
 						</tr>
 						<tr id="12" class="timeblock">
 							<td>12pm</td>
 							<td><input class="form-control" data-store="3" placeholder="Add Your Event Here"></td>
-							<td><button class="editbtn btn btn-outline-dark">Save Changes</button></td>
+							<td class="text-center"><button class="editbtn btn btn-outline-light">Save Changes</button></td>
 						</tr>
 						<tr id="13" class="timeblock">
 							<td>1pm</td>
 							<td><input class="form-control" data-store="4" placeholder="Add Your Event Here"></td>
-							<td><button class="editbtn btn btn-outline-dark">Save Changes</button></td>
+							<td class="text-center"><button class="editbtn btn btn-outline-light">Save Changes</button></td>
 						</tr>
 						<tr id="14" class="timeblock">
 							<td>2pm</td>
 							<td><input class="form-control" data-store="5" placeholder="Add Your Event Here"></td>
-							<td><button class="editbtn btn btn-outline-dark">Save Changes</button></td>
+							<td class="text-center"><button class="editbtn btn btn-outline-light">Save Changes</button></td>
 						</tr>
 						<tr id="15" class="timeblock">
 							<td>3pm</td>
 							<td><input class="form-control" data-store="6" placeholder="Add Your Event Here"></td>
-							<td><button class="editbtn btn btn-outline-dark">Save Changes</button></td>
+							<td class="text-center"><button class="editbtn btn btn-outline-light">Save Changes</button></td>
 						</tr>
 						<tr id="16" class="timeblock">
 							<td>4pm</td>
 							<td><input class="form-control" data-store="7" placeholder="Add Your Event Here"></td>
-							<td><button class="editbtn btn btn-outline-dark">Save Changes</button></td>
+							<td class="text-center"><button class="editbtn btn btn-outline-light">Save Changes</button></td>
 						</tr>
 						<tr id="17" class="timeblock">
 							<td>5pm</td>
 							<td><input class="form-control" data-store="8" placeholder="Add Your Event Here"></td>
-							<td><button class="editbtn btn btn-outline-dark">Save Changes</button></td>
+							<td class="text-center"><button class="editbtn btn btn-outline-light">Save Changes</button></td>
 						</tr>
 
 					</tbody>
@@ -156,7 +158,7 @@
 			} else if (currentHour < rowHour) {
 			setColor(row, "blue");
 			} else if (currentHour > rowHour) {
-			setColor(row, "red");
+			setColor(row, "black");
 			} else {
 			setColor(row, "white");
 			}
