--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 				
 			</p>
 		</header>
-		<div class="container">
-				<h2>Time Table</h2>
+		<div class="container text-center">
+				<h2 class="clock"></h2>
 				<table class="table text-light">
 					<thead>
 						<tr>
@@ -93,6 +93,16 @@
 					</tbody>
 				</table>
 		</div>
+
+		<footer class="container mt-5">
+			<div class="card row no-gutters text-center">
+			  <div class="card-body pl-0 pr-0 ml-5 mr-5">
+				<h5 class="card-title clock"></h5>
+			  </div>
+			</div>
+		  </footer>
+
+
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 		<script type ="text/javascript">
 		//currently saves all feilds on click, not just own row. Saving works fine but loading the data jumps everything up one row, deleting the top.
@@ -116,22 +126,27 @@
 				
 				}) 
 			}
-		//on "keyup" saves text input to local data. Saves as soon as input is finished
-		// $("*[data-store]").on("keyup", function (itm) {
-		// localStorage.setItem ("item-" + $(this).attr("data-store"), $(this).val());
-		// })
+			//Original design basic save and load: on "keyup" saves text input to local data. Saves as soon as input is finished
+				// $("*[data-store]").on("keyup", function (itm) {
+				// localStorage.setItem ("item-" + $(this).attr("data-store"), $(this).val());
+				// })
 
 		})
 		
 
 		//grabs the date from moment.js and sets it to the appropriate class
 		getDate();
+		getTime();
 		function getDate() {
 			//format("LL") gets rid of the extra information from momentjs.
 			var now = moment().format("LL");
 			console.log(now);
 			$("#currentDay").text(now)
 		}
+		function getTime () {
+			var time = moment().format("LT");
+			$(".clock").text(time)
+		}		
 	
 		//grabs the hour. format(H) gives an interger fo hour from 1 to 24
 		
@@ -170,6 +185,5 @@ function setColor(element, color) {
 }
 		
 		</script>
-	
 	</body>
 </html>
